DAS-2438 - Add and apply ruff and clang formatting to pre-commit. (#2)
* DAS-2438 - Add ruff-format and clang-format to .pre-commit-config.yaml.

* DAS-2438 - Update service version and CHANGELOG.

* DAS-2348 - Update test_code_format.py format.

* DAS-2438 - Specify clang format config values.

* DAS-2438 - Add large pre-commit format updates to .git-blame-ignore-revs.

* DAS-2438 - Move all braces to newlines.

* DAS-2438 - Add reformatting commit to .git-blame-ignore-revs.

* DAS-2438 - Remove new commits from .git-blame-ignore-revs to add single squashed commit later.

* DAS-2438 - Add nodefaults channel to environment.yaml.

--- a/docs/TrajectorySubsetter.ipynb
+++ b/docs/TrajectorySubsetter.ipynb
@@ -92,8 +92,6 @@
    "source": [
     "from datetime import datetime\n",
     "from os import replace\n",
-    "from os.path import exists\n",
-    "from shutil import move\n",
     "\n",
     "from harmony import BBox, Client, Collection, Environment, Request\n",
     "from netCDF4 import Dataset\n",
@@ -102,10 +100,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "gedi_l4a = Collection(id='C1242267295-EEDTEST')\n",
-    "file_root_name = 'GEDI_L4A'\n",
-    "variables = ['/BEAM0000/agbd']\n",
-    "granule_id = 'G1242274838-EEDTEST'\n",
+    "gedi_l4a = Collection(id=\"C1242267295-EEDTEST\")\n",
+    "file_root_name = \"GEDI_L4A\"\n",
+    "variables = [\"/BEAM0000/agbd\"]\n",
+    "granule_id = \"G1242274838-EEDTEST\"\n",
     "\n",
     "harmony_client = Client(env=Environment.UAT)"
    ]
@@ -126,31 +124,31 @@
    "outputs": [],
    "source": [
     "def print_all_variables(dataset):\n",
-    "    \"\"\" A helper function to traverse all groups in a file and\n",
-    "        print the variables present, along with their sizes.\n",
+    "    \"\"\"A helper function to traverse all groups in a file and\n",
+    "    print the variables present, along with their sizes.\n",
     "\n",
     "    \"\"\"\n",
-    "    print('\\nVariables present:\\n')\n",
+    "    print(\"\\nVariables present:\\n\")\n",
     "\n",
     "    for group in dataset.groups.values():\n",
     "        for variable in group.variables.values():\n",
-    "            print(f'{group.path}/{variable.name}, {variable.shape}')\n",
+    "            print(f\"{group.path}/{variable.name}, {variable.shape}\")\n",
     "\n",
-    "    print('\\n')\n",
+    "    print(\"\\n\")\n",
     "\n",
     "\n",
     "def get_geo_plot_fig_and_ax(extents):\n",
-    "    \"\"\" A helper function to retrieve the figure and axes for a plot\n",
-    "        showing landmasses, oceans and country borders.\n",
+    "    \"\"\"A helper function to retrieve the figure and axes for a plot\n",
+    "    showing landmasses, oceans and country borders.\n",
     "\n",
     "    \"\"\"\n",
-    "    fig = plt.figure(figsize=(10,10))\n",
+    "    fig = plt.figure(figsize=(10, 10))\n",
     "    ax = fig.add_subplot(1, 1, 1, projection=ccrs.PlateCarree())\n",
     "    ax.set_extent(extents, crs=ccrs.PlateCarree())\n",
     "    ax.add_feature(cfeature.LAND)\n",
     "    ax.add_feature(cfeature.OCEAN)\n",
     "    ax.add_feature(cfeature.COASTLINE)\n",
-    "    ax.add_feature(cfeature.BORDERS, linestyle=':')\n",
+    "    ax.add_feature(cfeature.BORDERS, linestyle=\":\")\n",
     "    ax.add_feature(cfeature.LAKES, alpha=0.5)\n",
     "    ax.add_feature(cfeature.RIVERS)\n",
     "    return fig, ax"
@@ -185,21 +183,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "variable_subset_request = Request(collection=gedi_l4a, variables=variables, granule_id=[granule_id])\n",
+    "variable_subset_request = Request(\n",
+    "    collection=gedi_l4a, variables=variables, granule_id=[granule_id]\n",
+    ")\n",
     "variable_subset_job_id = harmony_client.submit(variable_subset_request)\n",
-    "variable_local_file_name = f'{file_root_name}_variable.h5'\n",
+    "variable_local_file_name = f\"{file_root_name}_variable.h5\"\n",
     "\n",
-    "print(f'Processing job: {variable_subset_job_id}')\n",
+    "print(f\"Processing job: {variable_subset_job_id}\")\n",
     "\n",
-    "for filename in [file_future.result()\n",
-    "                 for file_future\n",
-    "                 in harmony_client.download_all(variable_subset_job_id, overwrite=True)]:\n",
-    "    if filename.endswith('.h5'):\n",
-    "        print(f'Downloaded: {filename}')\n",
+    "for filename in [\n",
+    "    file_future.result()\n",
+    "    for file_future in harmony_client.download_all(\n",
+    "        variable_subset_job_id, overwrite=True\n",
+    "    )\n",
+    "]:\n",
+    "    if filename.endswith(\".h5\"):\n",
+    "        print(f\"Downloaded: {filename}\")\n",
     "        h5_filename = filename\n",
     "\n",
     "replace(h5_filename, variable_local_file_name)\n",
-    "print(f'Saved output to: {variable_local_file_name}')"
+    "print(f\"Saved output to: {variable_local_file_name}\")"
    ]
   },
   {
@@ -219,12 +222,18 @@
    "source": [
     "fig, ax = get_geo_plot_fig_and_ax([-180, 180, -90, 90])\n",
     "\n",
-    "with Dataset(variable_local_file_name, 'r') as variable_dataset:\n",
+    "with Dataset(variable_local_file_name, \"r\") as variable_dataset:\n",
     "    print_all_variables(variable_dataset)\n",
-    "    variable_latitude = variable_dataset['/BEAM0000/lat_lowestmode'][:]\n",
-    "    variable_longitude = variable_dataset['/BEAM0000/lon_lowestmode'][:]\n",
+    "    variable_latitude = variable_dataset[\"/BEAM0000/lat_lowestmode\"][:]\n",
+    "    variable_longitude = variable_dataset[\"/BEAM0000/lon_lowestmode\"][:]\n",
     "\n",
-    "plt.plot(variable_longitude, variable_latitude, color='red', linewidth=2, transform=ccrs.Geodetic())"
+    "plt.plot(\n",
+    "    variable_longitude,\n",
+    "    variable_latitude,\n",
+    "    color=\"red\",\n",
+    "    linewidth=2,\n",
+    "    transform=ccrs.Geodetic(),\n",
+    ")"
    ]
   },
   {
@@ -248,24 +257,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temporal_range = {'start': datetime(2020, 7, 25, 1, 0, 0), 'stop': datetime(2020, 7, 25, 2, 0, 0)}\n",
+    "temporal_range = {\n",
+    "    \"start\": datetime(2020, 7, 25, 1, 0, 0),\n",
+    "    \"stop\": datetime(2020, 7, 25, 2, 0, 0),\n",
+    "}\n",
     "\n",
-    "temporal_subset_request = Request(collection=gedi_l4a, temporal=temporal_range,\n",
-    "                                  variables=variables, granule_id=[granule_id])\n",
+    "temporal_subset_request = Request(\n",
+    "    collection=gedi_l4a,\n",
+    "    temporal=temporal_range,\n",
+    "    variables=variables,\n",
+    "    granule_id=[granule_id],\n",
+    ")\n",
     "temporal_subset_job_id = harmony_client.submit(temporal_subset_request)\n",
-    "temporal_local_file_name = f'{file_root_name}_temporal.h5'\n",
+    "temporal_local_file_name = f\"{file_root_name}_temporal.h5\"\n",
     "\n",
-    "print(f'Processing job: {temporal_subset_job_id}')\n",
+    "print(f\"Processing job: {temporal_subset_job_id}\")\n",
     "\n",
-    "for filename in [file_future.result()\n",
-    "                 for file_future\n",
-    "                 in harmony_client.download_all(temporal_subset_job_id, overwrite=True)]:\n",
-    "    if filename.endswith('.h5'):\n",
-    "        print(f'Downloaded: {filename}')\n",
+    "for filename in [\n",
+    "    file_future.result()\n",
+    "    for file_future in harmony_client.download_all(\n",
+    "        temporal_subset_job_id, overwrite=True\n",
+    "    )\n",
+    "]:\n",
+    "    if filename.endswith(\".h5\"):\n",
+    "        print(f\"Downloaded: {filename}\")\n",
     "        h5_filename = filename\n",
     "\n",
     "replace(h5_filename, temporal_local_file_name)\n",
-    "print(f'Saved output to: {temporal_local_file_name}')"
+    "print(f\"Saved output to: {temporal_local_file_name}\")"
    ]
   },
   {
@@ -285,12 +304,18 @@
    "source": [
     "fig, ax = get_geo_plot_fig_and_ax([-180, 180, -90, 90])\n",
     "\n",
-    "with Dataset(temporal_local_file_name, 'r') as temporal_dataset:\n",
+    "with Dataset(temporal_local_file_name, \"r\") as temporal_dataset:\n",
     "    print_all_variables(temporal_dataset)\n",
-    "    temporal_latitude = temporal_dataset['/BEAM0000/lat_lowestmode'][:]\n",
-    "    temporal_longitude = temporal_dataset['/BEAM0000/lon_lowestmode'][:]\n",
+    "    temporal_latitude = temporal_dataset[\"/BEAM0000/lat_lowestmode\"][:]\n",
+    "    temporal_longitude = temporal_dataset[\"/BEAM0000/lon_lowestmode\"][:]\n",
     "\n",
-    "plt.plot(temporal_longitude, temporal_latitude, color='red', linewidth=2, transform=ccrs.Geodetic())"
+    "plt.plot(\n",
+    "    temporal_longitude,\n",
+    "    temporal_latitude,\n",
+    "    color=\"red\",\n",
+    "    linewidth=2,\n",
+    "    transform=ccrs.Geodetic(),\n",
+    ")"
    ]
   },
   {
@@ -324,22 +349,27 @@
    "source": [
     "bounding_box = BBox(w=-120, s=45, e=-100, n=55)\n",
     "\n",
-    "bbox_subset_request = Request(collection=gedi_l4a, spatial=bounding_box,\n",
-    "                              granule_id=[granule_id], variables=variables)\n",
+    "bbox_subset_request = Request(\n",
+    "    collection=gedi_l4a,\n",
+    "    spatial=bounding_box,\n",
+    "    granule_id=[granule_id],\n",
+    "    variables=variables,\n",
+    ")\n",
     "bbox_subset_job_id = harmony_client.submit(bbox_subset_request)\n",
-    "bbox_local_file_name = f'{file_root_name}_bbox.h5'\n",
+    "bbox_local_file_name = f\"{file_root_name}_bbox.h5\"\n",
     "\n",
-    "print(f'Processing job: {bbox_subset_job_id}')\n",
+    "print(f\"Processing job: {bbox_subset_job_id}\")\n",
     "\n",
-    "for filename in [file_future.result()\n",
-    "                 for file_future\n",
-    "                 in harmony_client.download_all(bbox_subset_job_id, overwrite=True)]:\n",
-    "    if filename.endswith('.h5'):\n",
-    "        print(f'Downloaded: {filename}')\n",
+    "for filename in [\n",
+    "    file_future.result()\n",
+    "    for file_future in harmony_client.download_all(bbox_subset_job_id, overwrite=True)\n",
+    "]:\n",
+    "    if filename.endswith(\".h5\"):\n",
+    "        print(f\"Downloaded: {filename}\")\n",
     "        h5_filename = filename\n",
     "\n",
     "replace(h5_filename, bbox_local_file_name)\n",
-    "print(f'Saved output to: {bbox_local_file_name}')"
+    "print(f\"Saved output to: {bbox_local_file_name}\")"
    ]
   },
   {
@@ -359,16 +389,36 @@
    "source": [
     "fig, ax = get_geo_plot_fig_and_ax([-130, -90, 35, 65])\n",
     "\n",
-    "with Dataset(bbox_local_file_name, 'r') as bbox_dataset:\n",
+    "with Dataset(bbox_local_file_name, \"r\") as bbox_dataset:\n",
     "    print_all_variables(bbox_dataset)\n",
-    "    bbox_latitude = bbox_dataset['/BEAM0000/lat_lowestmode'][:]\n",
-    "    bbox_longitude = bbox_dataset['/BEAM0000/lon_lowestmode'][:]\n",
+    "    bbox_latitude = bbox_dataset[\"/BEAM0000/lat_lowestmode\"][:]\n",
+    "    bbox_longitude = bbox_dataset[\"/BEAM0000/lon_lowestmode\"][:]\n",
     "\n",
-    "bbox_longitudes = [bounding_box.w, bounding_box.w, bounding_box.e, bounding_box.e, bounding_box.w]\n",
-    "bbox_latitudes = [bounding_box.s, bounding_box.n, bounding_box.n, bounding_box.s, bounding_box.s]\n",
+    "bbox_longitudes = [\n",
+    "    bounding_box.w,\n",
+    "    bounding_box.w,\n",
+    "    bounding_box.e,\n",
+    "    bounding_box.e,\n",
+    "    bounding_box.w,\n",
+    "]\n",
+    "bbox_latitudes = [\n",
+    "    bounding_box.s,\n",
+    "    bounding_box.n,\n",
+    "    bounding_box.n,\n",
+    "    bounding_box.s,\n",
+    "    bounding_box.s,\n",
+    "]\n",
     "\n",
-    "plt.plot(bbox_longitudes, bbox_latitudes, color='green', linewidth=2, transform=ccrs.Geodetic())\n",
-    "plt.plot(bbox_longitude, bbox_latitude, color='red', linewidth=2, transform=ccrs.Geodetic())"
+    "plt.plot(\n",
+    "    bbox_longitudes,\n",
+    "    bbox_latitudes,\n",
+    "    color=\"green\",\n",
+    "    linewidth=2,\n",
+    "    transform=ccrs.Geodetic(),\n",
+    ")\n",
+    "plt.plot(\n",
+    "    bbox_longitude, bbox_latitude, color=\"red\", linewidth=2, transform=ccrs.Geodetic()\n",
+    ")"
    ]
   },
   {
@@ -395,25 +445,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "egypt_granule_id = 'G1242274852-EEDTEST'\n",
+    "egypt_granule_id = \"G1242274852-EEDTEST\"\n",
     "\n",
-    "polygon_subset_request = Request(collection=gedi_l4a, granule_id=[egypt_granule_id],\n",
-    "                                 variables=variables, shape='EGY.geo.json')\n",
+    "polygon_subset_request = Request(\n",
+    "    collection=gedi_l4a,\n",
+    "    granule_id=[egypt_granule_id],\n",
+    "    variables=variables,\n",
+    "    shape=\"EGY.geo.json\",\n",
+    ")\n",
     "polygon_subset_job_id = harmony_client.submit(polygon_subset_request)\n",
-    "polygon_local_file_name = f'{file_root_name}_polygon.h5'\n",
+    "polygon_local_file_name = f\"{file_root_name}_polygon.h5\"\n",
     "\n",
     "\n",
-    "print(f'Processing job: {polygon_subset_job_id}')\n",
+    "print(f\"Processing job: {polygon_subset_job_id}\")\n",
     "\n",
-    "for filename in [file_future.result()\n",
-    "                 for file_future\n",
-    "                 in harmony_client.download_all(polygon_subset_job_id, overwrite=True)]:\n",
-    "    if filename.endswith('.h5'):\n",
-    "        print(f'Downloaded: {filename}')\n",
+    "for filename in [\n",
+    "    file_future.result()\n",
+    "    for file_future in harmony_client.download_all(\n",
+    "        polygon_subset_job_id, overwrite=True\n",
+    "    )\n",
+    "]:\n",
+    "    if filename.endswith(\".h5\"):\n",
+    "        print(f\"Downloaded: {filename}\")\n",
     "        h5_filename = filename\n",
     "\n",
     "replace(h5_filename, polygon_local_file_name)\n",
-    "print(f'Saved output to: {polygon_local_file_name}')"
+    "print(f\"Saved output to: {polygon_local_file_name}\")"
    ]
   },
   {
@@ -435,12 +492,18 @@
    "source": [
     "fig, ax = get_geo_plot_fig_and_ax([20, 40, 19, 35])\n",
     "\n",
-    "with Dataset(polygon_local_file_name, 'r') as polygon_dataset:\n",
+    "with Dataset(polygon_local_file_name, \"r\") as polygon_dataset:\n",
     "    print_all_variables(polygon_dataset)\n",
-    "    polygon_latitude = polygon_dataset['/BEAM0000/lat_lowestmode'][:]\n",
-    "    polygon_longitude = polygon_dataset['/BEAM0000/lon_lowestmode'][:]\n",
+    "    polygon_latitude = polygon_dataset[\"/BEAM0000/lat_lowestmode\"][:]\n",
+    "    polygon_longitude = polygon_dataset[\"/BEAM0000/lon_lowestmode\"][:]\n",
     "\n",
-    "plt.plot(polygon_longitude, polygon_latitude, color='red', linewidth=2, transform=ccrs.Geodetic())"
+    "plt.plot(\n",
+    "    polygon_longitude,\n",
+    "    polygon_latitude,\n",
+    "    color=\"red\",\n",
+    "    linewidth=2,\n",
+    "    transform=ccrs.Geodetic(),\n",
+    ")"
    ]
   }
  ],
